[tool.poetry]
name = "CMS-Bot"
version = "0.1.0"
description = ""
authors = ["DmitryDubovikov <dmitry.dubovikov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
