[tool.poetry]
name = "CMS-Bot"
version = "0.1.0"
description = ""
authors = ["DmitryDubovikov <dmitry.dubovikov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.3"
python-telegram-bot = "13.15"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
